[project]
name = "PyDSL"
version = "0.0.1"
description = "PyDSL - Interpreted python using HTTP calls"
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
  "aiosqlite==0.20.0",
  "fastapi==0.115.0",
  "granian>=1.6.0",
  "orjson==3.10.7",
  "sqlmodel==0.0.22",
  "uuid7==0.1.0",
]

classifiers = [
  "Development Status :: 3 - Alpha",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Repository = "https://github.com/GustasG/PyDSL"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
  "E", # pycodestyle
  "F", # Pyflakes
  "I", # isort
  "UP", # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.uv]
dev-dependencies = [
  "fastapi-cli>=0.0.5",
  "httpx>=0.27.2",
  "pyhamcrest>=2.1.0",
  "pytest>=8.3.3",
]
